--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            py.test tests.py
+            python test_downloads.py
 
       - store_artifacts:
           path: test-reports
