--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python test_download.py
+            python tests/test_download.py
 
       - store_artifacts:
           path: test-reports
