--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,24 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
-          
+
+  deploy:
+    docker:
+      - image: my-image
+    working_directory: /Margatsni  
+    steps:
+      - run:
+          name: Deploy to S3 if tests pass and branch is Master
+          command: aws s3 sync jekyll/_site/docs s3://circle-production-static-site/docs/ --delete
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
