--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,11 +51,9 @@ jobs:
     working_directory: /Margatsni  
     steps:
       - run:
-          name: Deploy to S3 if tests pass and branch is Master
-          command: aws s3 sync jekyll/_site/docs s3://circle-production-static-site/docs/ --delete
+          name: Deploy to ec2 if tests pass and branch is Master
+          command: aws ec2 sync jekyll/_site/docs ec2://circle-production-static-site/docs/ --delete
 
-workflows:
-  version: 2
   build-deploy:
     jobs:
       - build-job
