--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,3 @@
 option_settings:
   "aws:elasticbeanstalk:container:python:staticfiles":
-    "/static/": "../static/"
+    "/static/": "app/static/"
