--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,3 +1,6 @@
 option_settings:
-  "aws:elasticbeanstalk:container:python:staticfiles":
-    "/static/": "app/static/"
+  aws:elasticbeanstalk:container:python:staticfiles:
+    /static/: app/static/
+  aws:elasticbeanstalk:application:environment:
+    FLASK_DEBUG: true
+    APP_VERSION: v1.2.0
